--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -113,9 +113,10 @@
 
                     <div class="header-right">
                        
-                        <a href="wishlist.html" class="wishlist-link">
+                        <a href="/wishlist" class="wishlist-link">
                             <i class="icon-heart-o"></i>
-                            <span class="wishlist-count">3</span>
+                            <span class="wishlist-count" id="wishlistCount"></span>
+
                             <span class="wishlist-txt">My Wishlist</span>
                         </a>
                     
@@ -164,14 +165,14 @@
 
     
                                 </li>
-                                <li class="menu-item-has-children">
+                                <!-- <li class="menu-item-has-children">
                                     <a href="/shop" class="sf-with-ul">Category ▾</a>
                                     <ul class="sub-menu">
                                       <li><a href="/shop?category=men">Men</a></li>
                                       <li><a href="/shop?category=women">Women</a></li>
                                       <li><a href="/shop?category=kids">Kids</a></li>
                                     </ul>
-                                  </li>
+                                  </li> -->
                                   
                                 <li>
                                     <a href="about.html" class="sf-with-ul">About</a>
