--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -483,11 +483,11 @@ function getStatusBadgeClass(status) {
                                 Wallet
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" id="coupons-tab" role="tab"  href="/coupons">
                                 Coupons
                             </a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link text-danger" href="/logout">
                                 Logout
