--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -247,11 +247,11 @@
                                 Wallet
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" id="coupons-tab" role="tab"  href="/coupons">
                                 Coupons
                             </a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link text-danger" href="/logout">
                                 Logout
