--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -156,20 +156,13 @@ body {
                     </a>
                 </li>
                 
-                <!-- <li class="menu-item">
-                    <a class="menu-link" href="/admin/coupon"> <i class="icon material-icons md-class"></i>
-                        <span class="text">Coupon</span> </a>
-                </li>
                 <li class="menu-item">
-                    <a class="menu-link" href="/admin/banner"> <i class="icon material-icons md-photo_size_select_actual"></i>
-                        <span class="text">Banner</span> </a>
-                </li> -->
-
-                <!-- <li class="menu-item">
-                    <a class="menu-link" href="/admin/orderList"> <i class="icon material-icons md-shopping_cart"></i>
-                        <span class="text">Orders</span>
+                    <a class="menu-link" href="/admin/coupon">
+                        <i class="material-icons">local_offer</i>
+                        <span class="text">Coupons</span>
                     </a>
-                </li> -->
+                </li>
+                
             </ul>
         </nav>
     </aside>
