--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -113,7 +113,7 @@ body {
         <nav>
             <ul class="menu-aside">
                 <li class="menu-item">
-                    <a class="menu-link" href="/admin">
+                    <a class="menu-link" href="dashboard">
                         <i class="material-icons">dashboard</i>
                         <span class="text">Dashboard</span>
                     </a>
